Fixing coverage for java.base.